--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <script src="main.js" type="module"></script>
 </head>
 <body>
-    
+    <div class="box">
+        <h1>The great wisdom of the Poet can be found here</h1>  
+        <input type = "button" onclick = "printToScreen()" value = "Generate">  
+
+   
+    </div>
 </body>
 </html>
