export modul for html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="box">
         <h1>The great wisdom of the Poet can be found here</h1>  
-        <input type = "button" onclick = "alert('beep')" value = "Generate">  
+        <input type = "button" onclick = "printToScreen()" value = "Generate">  
 
    
     </div>
