--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Gimme Haiku Alert</title>
 <script src="main.js" type="module"></script>
 </head>
 <body>
     <div class="box">
-        <h1>The great wisdom of the Poet can be found here</h1>  
-        <input type = "button" onclick = "printToScreen()" value = "Generate" id="gen">  
+        <h1>The great wisdom in verse; written and deliverd</h1>  
+        <input type = "button" class ="btn" onclick = "printToScreen()" value = "Generate" id="gen">  
 
    
     </div>
